@@ -2,6 +2,7 @@ v1.0
 New methods:
 -- Photo and file upload now supported through #put_picture and general support for file hashes (see documentation)
 -- Added a delete_like method (thanks to wassem)
+-- Beta 2: Added put_connection and delete_connection convenience methods
 Internal improvements: 
 -- For public requests, Koala now uses http by default (instead of https) to improve speed
   -- This can be overridden through Koala.always_use_ssl= or by passing :use_ssl => true in the options hash for an api call
@@ -9,6 +10,7 @@ Internal improvements:
 -- Replaced parse_signed_request with a version from Facebook that also supports the new signed params proposal
   -- Note: invalid requests will now raise exceptions rather than return nil, in keeping with other SDKs
 -- delete_object will now raise an error if there's no access token (like put_object and delete_like)
+-- Beta 2: photo and file uploads now accept symbols as well as strings in the file hash
 Test improvements:
 -- Expanded HTTP service tests (added Typhoeus test suite and additional Net::HTTP test cases)
 -- Live tests now verify that the access token has the necessary permissions before starting
